<resources>
    <string name="app_name">KittyPlace</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="kitty_place">Kitty Place</string>
    <string name="kitty_collection">Kitty Collection</string>
    <string name="kitty_market">Kitty Market</string>
    <string name="kitty_wallet">Kitty Wallet</string>

    <string name="tape_screen">Tap Screen</string>

    <string name="profile">User Profile</string>
    <string name="settings">Settings</string>
    <string name="inbox">Inbox</string>
    <string name="back">Back</string>

    <string name="login">Login :</string>
    <string name="password">Password :</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot">Forgot Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="kitty_finder">Kitty Finder Game</string>

    <string name="euro">Euro :</string>
    <string name="btc">BitCoin :</string>
    <string name="eth">Ethereum :</string>
    <string name="usd">USDollar :</string>

    <string name="buy">Buy !</string>
    <string name="sell">Sell !</string>
    <string name="on_sale">On Sale</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="cancel">Cancel</string>

    <string name="supply">Supply !</string>

    <!--<string name=""></string>-->
</resources>