<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <ImageView
        android:id="@+id/img_kitty"
        android:layout_width="365dp"
        android:layout_height="397dp"
        android:layout_marginTop="592dp"
        android:layout_marginEnd="136dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/kitty_1" />

    <ImageView
        android:id="@+id/img_title"
        android:layout_width="283dp"
        android:layout_height="159dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/app_title" />

    <ImageButton
        android:id="@+id/btn_collection"
        android:layout_width="311dp"
        android:layout_height="89dp"
        android:layout_marginTop="272dp"
        android:layout_marginEnd="4dp"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/app_collection" />

    <ImageButton
        android:id="@+id/btn_wallet"
        android:layout_width="311dp"
        android:layout_height="89dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="4dp"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_collection"
        app:srcCompat="@drawable/app_wallet" />

    <ImageButton
        android:id="@+id/btn_market"
        android:layout_width="311dp"
        android:layout_height="89dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="4dp"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_wallet"
        app:srcCompat="@drawable/app_market" />

    <Button
        android:id="@+id/btn_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="668dp"
        android:text="@string/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/btn_profile" />

    <Button
        android:id="@+id/btn_inbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/inbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/btn_settings" />

</androidx.constraintlayout.widget.ConstraintLayout>